Bug 342330 - No documentation edit possible in class attribute, operation and template dialog
Summary: No documentation edit possible in class attribute, operation and template dialog
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.5
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 101203 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-30 10:40 UTC by Ralf Habacker
Modified: 2018-05-14 11:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.1 (KDE 14.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-30 10:40:47 UTC
It is not possible to enter or change the documentation of a class attribute, operation or template directly in the related property dialog. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add class and class attribute, class method and template
3. double click on attribute, method or template
4. select attribute, method or template page
5. select attribute, method or template
6. press properties

Actual Results:  
There is no documention edit field.

Expected Results:  
It should be possible to edit class attribute, method or template documentation in the related property dialog.
Comment 1 Ralf Habacker 2014-12-30 10:51:47 UTC
Git commit 739d8c06bce27595491e477bbd2304cafb81518f by Ralf Habacker.
Committed on 30/12/2014 at 03:41.
Pushed by habacker into branch 'Applications/14.12'.

Fix 'No documentation edit possible in class attribute, operation and template dialog'.

This commit introduces a new class DocumentationWidget in sub directory dialogs/widgets
to prepare properties window support.
FIXED-IN:2.15.1 (KDE 14.12.1)

M  +2    -0    umbrello/CMakeLists.txt
M  +6    -0    umbrello/dialogs/umlattributedialog.cpp
M  +2    -0    umbrello/dialogs/umlattributedialog.h
M  +5    -0    umbrello/dialogs/umloperationdialog.cpp
M  +2    -0    umbrello/dialogs/umloperationdialog.h
M  +5    -0    umbrello/dialogs/umltemplatedialog.cpp
M  +2    -0    umbrello/dialogs/umltemplatedialog.h
A  +51   -0    umbrello/dialogs/widgets/documentationwidget.cpp     [License: GPL (v2+)]
A  +38   -0    umbrello/dialogs/widgets/documentationwidget.h     [License: GPL (v2+)]

http://commits.kde.org/umbrello/739d8c06bce27595491e477bbd2304cafb81518f
Comment 2 Ralf Habacker 2018-05-14 11:17:38 UTC
*** Bug 101203 has been marked as a duplicate of this bug. ***