Fix 'No documentation edit possible in class attribute, operation and template dialog'.

This commit introduces a new class DocumentationWidget in sub directory dialogs/widgets
to prepare properties window support.

BUG:342330
FIXED-IN:2.15.1 (KDE 14.12.1)