umbrello/dialogs/umlattributedialog.cpp
@@ -14,6 +14,7 @@
 // app includes
 #include "attribute.h"
 #include "classifier.h"
+#include "documentationwidget.h"
 #include "template.h"
 #include "umldoc.h"
 #include "uml.h"
@@ -136,6 +137,9 @@ void UMLAttributeDialog::setupDialog()
     //now add the Concepts
     insertTypesSorted(m_pAttribute->getTypeName());
 
+    m_docWidget = new DocumentationWidget(m_pAttribute, this);
+    mainLayout->addWidget(m_docWidget);
+
     m_pNameLE->setFocus();
     connect(m_pNameLE, SIGNAL(textChanged(QString)), SLOT(slotNameChanged(QString)));
     slotNameChanged(m_pNameLE->text());
@@ -229,6 +233,8 @@ bool UMLAttributeDialog::apply()
         classifier = static_cast<UMLClassifier*>(obj);
     }
     m_pAttribute->setType(classifier);
+    m_docWidget->apply();
+
     return true;
 }
 
