umbrello/dialogs/umloperationdialog.cpp
@@ -21,6 +21,7 @@
 #include "listpopupmenu.h"
 #include "umlattributelist.h"
 #include "classifierlistitem.h"
+#include "documentationwidget.h"
 #include "umlclassifierlistitemlist.h"
 #include "dialog_utils.h"
 #include "parameterpropertiesdialog.h"
@@ -137,6 +138,8 @@ void UMLOperationDialog::setupDialog()
     m_pImplementationRB = new QRadioButton(i18n("I&mplementation"), m_pScopeGB);
     scopeLayout->addWidget(m_pImplementationRB);
 
+    m_docWidget = new DocumentationWidget(m_operation, this);
+
     m_pParmsGB = new QGroupBox(i18n("Parameters"), frame);
     QVBoxLayout* parmsLayout = new QVBoxLayout(m_pParmsGB);
     parmsLayout->setMargin(margin);
@@ -176,6 +179,7 @@ void UMLOperationDialog::setupDialog()
 
     topLayout->addWidget(m_pGenGB);
     topLayout->addWidget(m_pScopeGB);
+    topLayout->addWidget(m_docWidget);
     topLayout->addWidget(m_pParmsGB);
 
     m_pDeleteButton->setEnabled(false);
@@ -485,6 +489,7 @@ bool UMLOperationDialog::apply()
     }
     m_operation->setStatic(m_pStaticCB->isChecked());
     m_operation->setConst(m_pQueryCB->isChecked());
+    m_docWidget->apply();
 
     return true;
 }
