umbrello/dialogs/widgets/documentationwidget.cpp
@@ -1,0 +1,51 @@
+/***************************************************************************
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ *   copyright (C) 2002-2014                                               *
+ *   Umbrello UML Modeller Authors <umbrello-devel@kde.org>                *
+ ***************************************************************************/
+
+#include "documentationwidget.h"
+
+#include "umlobject.h"
+
+#include <KTextEdit>
+#include <KLocalizedString>
+
+#include <QGroupBox>
+#include <QHBoxLayout>
+
+DocumentationWidget::DocumentationWidget(UMLObject *o, QWidget *parent) :
+    QWidget(parent),
+    m_object(o)
+{
+    Q_ASSERT(o);
+
+    QVBoxLayout *l = new QVBoxLayout;
+    m_box = new QGroupBox;
+    m_box->setTitle(i18n("Documentation"));
+    m_editField = new KTextEdit(m_box);
+    m_editField->setText(o->doc());
+    QVBoxLayout *layout = new QVBoxLayout(m_box);
+    layout->addWidget(m_editField);
+    l->addWidget(m_box);
+    setLayout(l);
+}
+
+DocumentationWidget::~DocumentationWidget()
+{
+    delete m_editField;
+    delete m_box;
+}
+
+/**
+ * Apply changes to the related UMLObject.
+ */
+void DocumentationWidget::apply()
+{
+    m_object->setDoc(m_editField->toPlainText());
+}
+
